small fix in catalogo (icone cliccabili) e in home (overflow)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,6 +83,10 @@ input {
     font-size: medium;
 }
 
+.clickable{
+    pointer-events: auto;
+}
+
 select{
     background-color: var(--color5);
     border: none;
